checkpoint: add root requirement comment to verify task

--- a/roles/proxmox_template/tasks/verify.yml
+++ b/roles/proxmox_template/tasks/verify.yml
@@ -1,6 +1,7 @@
 ---
 # Verify template was created successfully
 
+# this must be run as root!
 - name: Get list of all VMs and templates
   command: qm list
   become: true
