--- a/roles/proxmox_template/tasks/setup_cloudinit.yml
+++ b/roles/proxmox_template/tasks/setup_cloudinit.yml
@@ -12,6 +12,7 @@
   command: >
     qm set {{ template_vmid }}
     --ciuser {{ template_ci_user }}
+    --cipassword {{ template_ci_passwd }}
   become: true
   register: ciuser_result
 
